Add asset pages and windowed stats
